[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/Cave-Story.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Options_Menu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Settings.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Styles/hover_options_menu.tres" type="StyleBox" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 3
outline_color = Color( 0.0666667, 0.211765, 0.0509804, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.141176, 0.215686, 0.239216, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.443137, 0.490196, 0.341176, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Options_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1012.0
margin_bottom = 588.0
custom_constants/separation = -48

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1000.0
margin_bottom = 20.0
theme = SubResource( 2 )
custom_colors/font_outline_modulate = Color( 0.0666667, 0.211765, 0.0509804, 1 )
text = "Options"
align = 1
valign = 1

[node name="Settings" parent="MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -28.0
margin_right = 1000.0
margin_bottom = 602.0
size_flags_vertical = 3

[node name="Exit_Button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 554.0
margin_right = 1000.0
margin_bottom = 576.0
size_flags_vertical = 8
custom_styles/hover = ExtResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "Exit"

[connection signal="Exit_Options_Menu" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_Settings_Exit_Options_Menu"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit_Button" to="." method="_on_Exit_Button_pressed"]
